Wed Oct 11 12:02:48 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* rcs.c (RCS_gettag): support RCS keyword Name

Tue Oct 10 19:11:16 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * options.h.in (CVS_LOGIN): discuss, but leave commented out.
        The "cvs login" command is still under construction; however, the
        repository was changing so fast that instead of creating a branch
        and dealing with the attendant hair, I'm just developing on the
        trunk, making sure that everything is surrounded by "#ifdef
        CVS_LOGIN ... #endif" so I don't get in anyone's way.

        * login.c: include cvs.h before checking CVS_LOGIN, so it has a
        chance to get defined before we ask if it's defined.
        (login): oops, use semi not comma in `for' loop init.

        * Makefile.in (SOURCES, OBJECTS): include login.c, login.o.

        * main.c: added protoype for login().
        Added "login" entry to cmds[].
        (usg): added line about "login".

        * login.c: new file.

Tue Oct 10 18:33:47 1995  Karl Fogel  <kfogel@totoro.cyclic.com>

        * Makefile.in (COMMON_OBJECTS): added error.o.
        (OBJECTS): took error.o out; it's in COMMON_OBJECTS now.

Tue Oct 10 12:02:37 1995  Thorsten Lockert  <tholo@sigmasoft.com>

	* cvsbug.sh: Cater to lame versions of sh (4.4BSD ash) by using
	${foo-bar} instead of `if....`.

Tue Oct 10 12:02:37 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* remove.c (remove_fileproc): If noexec, don't remove file.  Check
	for error when removing file.

Sun Oct  8 12:32:15 1995  Peter Wemm  <peter@haywire.DIALix.COM>

	* run.c: detect/use POSIX/BSD style reliable signals for critical
	section masking etc.  Helps prevent stray locks on interruption.

Sat Oct  7 23:26:54 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* admin.c (admin): If group CVS_ADMIN_GROUP exists, allow only
	users in that group to use "cvs admin".
	* options.h.in: Default CVS_ADMIN_GROUP to "cvsadmin".
