@@ -1,3 +1,8 @@
+Wed Oct 11 15:23:24 1995  Karl Fogel  <kfogel@floss.cyclic.com>
+
+        * login.c (login): works somewhat, but still does not handle
+        replacement.
+
 Wed Oct 11 12:02:48 1995  Norbert Kiesel  <nk@col.sw-ley.de>
 
 	* rcs.c (RCS_gettag): support RCS keyword Name
